extra reminder folders.

--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,10 @@
 #cssStuff {
 	color: green;
 }
+/* #nav {
+	list-style: none;
+	position: absolute;
+	right: 50%;
+	margin-right: 155px;
+	margin-top: 220px;
+} */
